refactor(sensor): harden cache thread safety and modularize redis flow
- Store cached cultivation IDs and timestamps in atomic references with immutable list copies to ensure thread-safe caching during reconciliation.
- Decompose Redis sensor value append operations into dedicated helpers for filtering valid points, querying expired records, and executing transactions.
- Modernize sensor point collection access using `getFirst()` and streamline Redis transaction execution validation.